# stm32g070rb_rust_led_blink

./: Cargo.toml  memory.x
.cargo/: config
config/: config
src/: main.rs
